--- a/.github/workflows/terra.yaml
+++ b/.github/workflows/terra.yaml
@@ -27,8 +27,8 @@ jobs:
     - name: configure AWS credentials
       uses: aws-action/configure-aws-credentials@v1
       with:
-        aws-access-key-id: ${{ AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ AWS_SECRET_ACCESS_KEY }}
+        aws-access-key-id: ${{secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: us-east-1
    
 
